--- a/osuisp2/avrdude/.deps/libavrdude_a-ser_posix.Po
+++ b/osuisp2/avrdude/.deps/libavrdude_a-ser_posix.Po
@@ -9,9 +9,9 @@ libavrdude_a-ser_posix.o: ser_posix.c /usr/include/stdc-predef.h \
  /usr/include/i386-linux-gnu/bits/endian.h \
  /usr/include/i386-linux-gnu/bits/byteswap.h \
  /usr/include/i386-linux-gnu/bits/byteswap-16.h /usr/include/xlocale.h \
- /usr/include/stdio.h /usr/lib/gcc/i686-linux-gnu/4.8/include/stddef.h \
+ /usr/include/stdio.h /usr/lib/gcc/i686-linux-gnu/5/include/stddef.h \
  /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h \
- /usr/lib/gcc/i686-linux-gnu/4.8/include/stdarg.h \
+ /usr/lib/gcc/i686-linux-gnu/5/include/stdarg.h \
  /usr/include/i386-linux-gnu/bits/stdio_lim.h \
  /usr/include/i386-linux-gnu/bits/sys_errlist.h \
  /usr/include/i386-linux-gnu/bits/stdio.h \
@@ -54,9 +54,8 @@ libavrdude_a-ser_posix.o: ser_posix.c /usr/include/stdc-predef.h \
  /usr/include/i386-linux-gnu/asm/sockios.h \
  /usr/include/asm-generic/sockios.h \
  /usr/include/i386-linux-gnu/bits/socket2.h /usr/include/netdb.h \
- /usr/include/netinet/in.h \
- /usr/lib/gcc/i686-linux-gnu/4.8/include/stdint.h /usr/include/stdint.h \
- /usr/include/i386-linux-gnu/bits/wchar.h \
+ /usr/include/netinet/in.h /usr/lib/gcc/i686-linux-gnu/5/include/stdint.h \
+ /usr/include/stdint.h /usr/include/i386-linux-gnu/bits/wchar.h \
  /usr/include/i386-linux-gnu/bits/in.h /usr/include/rpc/netdb.h \
  /usr/include/i386-linux-gnu/bits/netdb.h /usr/include/fcntl.h \
  /usr/include/i386-linux-gnu/bits/fcntl.h \
@@ -99,7 +98,7 @@ libavrdude_a-ser_posix.o: ser_posix.c /usr/include/stdc-predef.h \
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stddef.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stddef.h:
 
 /usr/include/libio.h:
 
@@ -107,7 +106,7 @@ libavrdude_a-ser_posix.o: ser_posix.c /usr/include/stdc-predef.h \
 
 /usr/include/wchar.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stdarg.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stdarg.h:
 
 /usr/include/i386-linux-gnu/bits/stdio_lim.h:
 
@@ -215,7 +214,7 @@ libavrdude_a-ser_posix.o: ser_posix.c /usr/include/stdc-predef.h \
 
 /usr/include/netinet/in.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stdint.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stdint.h:
 
 /usr/include/stdint.h:
 
